force-app/main/default/objects/cadmus_core__Actionable__c/cadmus_core__Actionable__c.object-meta.xml
<CustomObject>
    <label>Actionable</label>
    <nameField>
        <label>Actionable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actionables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>