force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Action_Object__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Action_Object__c</fullName>
    <label>Action Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>