force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Adobe_Sign_Recipient__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Adobe_Sign_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who will receive this</inlineHelpText>
    <label>Recipient</label>
    <referenceTo>cadmus_core__Data_Source__c</referenceTo>
    <relationshipLabel>Actionables (Recipient)</relationshipLabel>
    <relationshipName>Actionables4</relationshipName>
    <type>Lookup</type>
</CustomField>