force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Adobe_Sign_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Adobe_Sign_Template_Id__c</fullName>
    <inlineHelpText>Adobe Sign template to use. Copy the identifier from the URL</inlineHelpText>
    <label>Template Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>