force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Class__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Class__c</fullName>
    <description>Class to run</description>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>