force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__DocuSign_DataSource__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__DocuSign_DataSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This links to the DataSource to use to get to the formula fiels that holds the parameter/querystring. Make sure the field is in the SOQL otherwise it will not be found.</inlineHelpText>
    <label>DocuSign DataSource</label>
    <referenceTo>cadmus_core__Data_Source__c</referenceTo>
    <relationshipLabel>Actionables (DocuSign DataSource)</relationshipLabel>
    <relationshipName>Actionables5</relationshipName>
    <type>Lookup</type>
</CustomField>