force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__DocuSign_Parameters_For_Url__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__DocuSign_Parameters_For_Url__c</fullName>
    <inlineHelpText>API name of the formula field that has the parameter- or querystring for DocuSign. The SourceId does not have to be added and the querystring should start with &apos;&amp;&apos;</inlineHelpText>
    <label>DocuSign Parameters For Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>