force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Email_Bcc_Address_Field__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Email_Bcc_Address_Field__c</fullName>
    <label>Email Bcc Address Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>