force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Email_Field_Bcc_Addresses_DataSource__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Email_Field_Bcc_Addresses_DataSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Field Bcc Addresses DataSource</label>
    <referenceTo>cadmus_core__Data_Source__c</referenceTo>
    <relationshipLabel>Actionables (Email Field Bcc Addresses DataSource)</relationshipLabel>
    <relationshipName>Email_Field_Bcc_Addresses_DataSource</relationshipName>
    <type>Lookup</type>
</CustomField>