force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Email_Hide_User_Signature__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Email_Hide_User_Signature__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If the User has a Signature setup in his &quot;My Email Settings&quot; this will be shown in the mail. If you do not want this, you can just check the checkbox</description>
    <inlineHelpText>If the User has a Signature setup in his &quot;My Email Settings&quot; this will be shown in the mail. If you do not want this, you can just check the checkbox</inlineHelpText>
    <label>Email Hide User Signature</label>
    <type>Checkbox</type>
</CustomField>