force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Email_Target_Object__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Email_Target_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact or User that will receive the email</inlineHelpText>
    <label>Email Target Object</label>
    <referenceTo>cadmus_core__Data_Source__c</referenceTo>
    <relationshipLabel>Actionables (Email Target Object)</relationshipLabel>
    <relationshipName>Actionables2</relationshipName>
    <type>Lookup</type>
</CustomField>