force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Email_Target_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Email_Target_Object_Field__c</fullName>
    <inlineHelpText>API name of the field to use from the Email Target Object DataSource. This field should be the Id of a User/Lead/Contact!
If left empty, it will assume that the DataSource returns a User/Lead/Contact record.
If the DataSource does not return a User/Lead/Contact record and this field is empty. The Email Target Object will be ignored if possible. If not possible to ignore, an error is thrown.</inlineHelpText>
    <label>Email Target Object Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>