force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Email_Template_Name__c</fullName>
    <inlineHelpText>The &quot;Template Unique Name&quot; of the Salesforce.com email template.</inlineHelpText>
    <label>Email Template Unique Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>