force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Email_To_Addresses__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Email_To_Addresses__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email To Addresses</label>
    <referenceTo>cadmus_core__Data_Source__c</referenceTo>
    <relationshipLabel>Actionables (Email To Addresses)</relationshipLabel>
    <relationshipName>Actionables3</relationshipName>
    <type>Lookup</type>
</CustomField>