force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Flow_API_Name__c</fullName>
    <inlineHelpText>API Name of the Autolaunched Lightning Flow</inlineHelpText>
    <label>Flow API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>