force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Org_Wide_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Org_Wide_Email_Address__c</fullName>
    <inlineHelpText>Display name of the Org Wide Email Address
Leave empty to use the current user as sender</inlineHelpText>
    <label>Org Wide Email Address Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>