force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Org_Wide_Email_Address_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Org_Wide_Email_Address_Data_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If you choose a DataSource for a Dynamic OWA selection, the field &quot;Org Wide Email Address Display Name&quot; must be the API name of the field to use in the DataSource</inlineHelpText>
    <label>Org Wide Email Address Data Source</label>
    <referenceTo>cadmus_core__Data_Source__c</referenceTo>
    <relationshipLabel>Actionables (Org Wide Email Address Data Source)</relationshipLabel>
    <relationshipName>Org_Wide_Email_Address_Data_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>