force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Pack__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Pack__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pack</label>
    <referenceTo>cadmus_core__Pack__c</referenceTo>
    <relationshipLabel>Actionables</relationshipLabel>
    <relationshipName>Actionables</relationshipName>
    <type>Lookup</type>
</CustomField>