force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Reply_To__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Reply_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This has to be a DataSource that selects a User, Contact or Lead. 
Leave empty to not use</inlineHelpText>
    <label>Reply To</label>
    <referenceTo>cadmus_core__Data_Source__c</referenceTo>
    <relationshipLabel>Actionables (Reply To)</relationshipLabel>
    <relationshipName>Actionables6</relationshipName>
    <type>Lookup</type>
</CustomField>