force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Static_Reply_To__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Static_Reply_To__c</fullName>
    <label>Static Reply To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>