force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Static_To_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Static_To_Email_Addresses__c</fullName>
    <inlineHelpText>&quot;;&quot; seperated list of email address</inlineHelpText>
    <label>Static To Email Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>