force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Upload_Host__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Upload_Host__c</fullName>
    <description>The &quot;domain&quot;</description>
    <inlineHelpText>In &quot;ftp://foo:bar@abcd.ef.com:21&quot; the host is &quot;abcd.ef.com&quot;</inlineHelpText>
    <label>Upload Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>