force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Upload_Path__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Upload_Path__c</fullName>
    <description>Folder path</description>
    <inlineHelpText>Folder path, do NOT include any file name!</inlineHelpText>
    <label>Upload Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>