force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Upload_Port__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Upload_Port__c</fullName>
    <description>Port number</description>
    <inlineHelpText>Usually 21 for FTP, 22 for SFTP</inlineHelpText>
    <label>Upload Port</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>