force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Upload_Scheme__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Upload_Scheme__c</fullName>
    <description>Scheme to be used</description>
    <inlineHelpText>SFTP and FTPS are tw very different things. Consult your IT department if you don&apos;t know which to chose.</inlineHelpText>
    <label>Upload Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ftp</fullName>
            </value>
            <value>
                <fullName>ftps</fullName>
            </value>
            <value>
                <fullName>sftp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>