force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__Upload_Userinfo__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Upload_Userinfo__c</fullName>
    <description>Credentials</description>
    <inlineHelpText>Usually formatted as {username}:{password}
Example:
john:password</inlineHelpText>
    <label>Upload Userinfo</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>