force-app/main/default/objects/cadmus_core__Actionable__c/fields/cadmus_core__When__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__When__c</fullName>
    <description>When to execute this action. Before or after the document is generated</description>
    <label>When</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE</fullName>
                <default>true</default>
                <label>BEGIN</label>
            </value>
            <value>
                <fullName>DATA_SOURCE</fullName>
                <label>ON DATA SOURCE</label>
            </value>
            <value>
                <fullName>BEFORE_BUT_AFTER_DATASOURCES</fullName>
                <label>BEFORE BUT AFTER DATASOURCES</label>
            </value>
            <value>
                <fullName>AFTER</fullName>
                <label>AFTER GENERATION</label>
            </value>
            <value>
                <fullName>AFTER_ASYNC</fullName>
                <isActive>false</isActive>
                <label>AFTER GENERATION BUT ASYNC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>