force-app/main/default/objects/cadmus_core__Actionable__c/recordTypes/cadmus_core__AdobeSign.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__AdobeSign</fullName>
    <active>true</active>
    <description>Send document via AdobeSign</description>
    <label>AdobeSign</label>
</RecordType>