force-app/main/default/objects/cadmus_core__Actionable__c/recordTypes/cadmus_core__Auto_Email.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__Auto_Email</fullName>
    <active>true</active>
    <description>Sends out your documents created by PDF Butler via mail. Uses a SFDC Template</description>
    <label>Auto Email</label>
</RecordType>