force-app/main/default/objects/cadmus_core__Actionable__c/recordTypes/cadmus_core__Auto_Email_for_Quick_Action.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__Auto_Email_for_Quick_Action</fullName>
    <active>true</active>
    <description>This actionable should be used with a Lightning Email Template. This action will open the Email Activity and prefill this with the Actionable data.</description>
    <label>Auto Email for Quick Action</label>
</RecordType>