force-app/main/default/objects/cadmus_core__Actionable__c/recordTypes/cadmus_core__DocuSign.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__DocuSign</fullName>
    <active>true</active>
    <description>Send document via DocuSign</description>
    <label>DocuSign</label>
</RecordType>