force-app/main/default/objects/cadmus_core__Actionable__c/recordTypes/cadmus_core__Email_DocConfig.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__Email_DocConfig</fullName>
    <active>true</active>
    <description>This actionable should be used when the DocConfig is of type EMAIL. This action will send out the resulting email.</description>
    <label>Email DocConfig</label>
</RecordType>