force-app/main/default/objects/cadmus_core__Actionable__c/recordTypes/cadmus_core__Email_DocConfig_for_Quick_Action.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__Email_DocConfig_for_Quick_Action</fullName>
    <active>true</active>
    <description>This actionable should be used when the DocConfig is of type EMAIL. This action will open the Email Activity and prefill this with the Actionable data.</description>
    <label>Email DocConfig for Quick Action</label>
</RecordType>