force-app/main/default/objects/cadmus_core__Actionable__c/recordTypes/cadmus_core__Run_Class.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__Run_Class</fullName>
    <active>true</active>
    <description>Run a class that is inherits AbstractAfterActionable or AbstractBeforeActionable</description>
    <label>Run Class</label>
</RecordType>