force-app/main/default/objects/cadmus_core__Actionable__c/recordTypes/cadmus_core__Run_Lightning_Flow.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__Run_Lightning_Flow</fullName>
    <active>true</active>
    <description>Run a Lightning Flow with your custom logic</description>
    <label>Run Lightning Flow</label>
</RecordType>