force-app/main/default/objects/cadmus_core__Actionable__c/recordTypes/cadmus_core__Upload.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__Upload</fullName>
    <active>true</active>
    <description>Upload file</description>
    <label>Upload</label>
</RecordType>